<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/cost_icon"
        android:layout_height="wrap_content"
        android:layout_width= "wrap_content"
        app:srcCompat = "@drawable/ic_store"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textInput"
        app:layout_constraintBottom_toBottomOf="@id/textInput"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/cost_of_service"
        app:layout_constraintStart_toEndOf="@id/cost_icon"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cost_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            tools:ignore="DuplicateSpeakableTextCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/service_icon"
        android:layout_height="wrap_content"
        android:layout_width= "wrap_content"
        app:srcCompat = "@drawable/ic_service"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/service_question_text"
        app:layout_constraintBottom_toBottomOf="@id/service_question_text"
        />


    <TextView
        android:id="@+id/service_question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_did_you_like_the_service"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/service_icon"
        app:layout_constraintTop_toBottomOf="@id/textInput" />

    <RadioGroup
        android:id="@+id/tip_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/first_tip_radio"
        app:layout_constraintStart_toStartOf="@id/service_question_text"
        app:layout_constraintTop_toBottomOf="@id/service_question_text">

        <RadioButton
            android:id="@+id/first_tip_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/absolutely_loved_it_20" />

        <RadioButton
            android:id="@+id/second_tip_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_10" />

        <RadioButton
            android:id="@+id/third_tip_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okay_5" />

    </RadioGroup>

    <ImageView
        android:id="@+id/round_tip_icon"
        android:layout_height="wrap_content"
        android:layout_width= "wrap_content"
        app:srcCompat = "@drawable/ic_round_up"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/round_tip_switch"
        app:layout_constraintBottom_toBottomOf="@id/round_tip_switch"
        />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/round_tip_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_marginStart="16dp"
        android:text="@string/round_up_tip"
        android:textColor="#00838F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/round_tip_icon"
        app:layout_constraintTop_toBottomOf="@id/tip_radio_group"
        tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />


    <Button
        android:id="@+id/calc_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop = "8dp"
        app:layout_constraintStart_toStartOf="@id/round_tip_switch"
        app:layout_constraintTop_toBottomOf="@id/round_tip_switch" />

    <TextView
        android:id="@+id/tip_amount_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calc_button"
        tools:text="Tip Amount : $10" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>